2006-03-17  Stephen J. Turnbull  <stephen@xemacs.org>

	* objects-x.c (x_font_instance_truename):
	Eliminate bogus pointer to nowhere.

2006-03-09  Jerry James  <james@xemacs.org>

	* profile.h (RETURN_UNGCPRO_EXIT_PROFILING): Add missing do.

2006-03-02  Marcus Crestani  <crestani@xemacs.org>

	* gc.c (show_gc_cursor_and_message): New.
	* gc.c (remove_gc_cursor_and_message): New.
	* gc.c (gc_prepare): Move mouse pointer code to
	show_gc_cursor_and_message.
	* gc.c (gc_finish): Move mouse pointer code to
	remove_gc_cursor_and_message.
	* gc.c (gc): Call show/remove_gc_cursor_and_message.
	* gc.c (garbage_collect_1): Call
	show/remove_gc_cursor_and_message.

2006-02-22  Marcus Crestani  <crestani@xemacs.org>

	Asynchronous finalization:
	
	* Makefile.in.in: Remove mc-alloc, replace with newgc.
	* alloc.c (alloc_lrecord): Add object that has a finalizer
	to Vall_finalizable_objs.
	* alloc.c (noseeum_alloc_lrecord): Add object that has a finalizer
	to Vall_finalizable_objs.
	* alloc.c (alloc_lrecord_array): Add object that has a finalizer
	to Vall_finalizable_objs.
	* alloc.c (free_lrecord): Disable manual free.
	* dumper.c (pdump_register_object): Objects with finalizers cannot
	be dumped.
	* eval.c (Ffuncall): Add call to run_finalizers.
	* gc.c (finalize_elem): New.
	* gc.c (add_finalizable_object): New.
	* gc.c (register_for_finalization): New.
	* gc.c (gc_finalize): Call register_for_finalization.
	* gc.c (gc_1): Move kkcc_gc_stack_free after finalization. 
	* gc.c (common_init_gc_early): Add asynchronous finalization
	variables.
	* gc.c (init_gc_early): Add asynchronous finalization variables.
	* gc.c (vars_of_gc): Add asynchronous finalization variables.
	* gc.h: Add asynchronous finalization prototypes.
	* mc-alloc.c (finalize_heap): Remove.
	* mc-alloc.c (mc_free): Disable manual free.

	* elhash.c (finalize_hash_table): Remove unneeded finalizer for
	NEW_GC
	* extents.c (finalize_extent_info): Remove unneeded finalizer for
	NEW_GC.