@@ -133,7 +133,7 @@ Dynarr_realloc (Dynarr *dy, int new_size)
 {
   if (DUMPEDP (dy->base))
     {
-      void *new_base = malloc (new_size);
+      void *new_base = malloc (new_size * dy->elsize);
       memcpy (new_base, dy->base, 
 	      (dy->max < new_size ? dy->max : new_size) * dy->elsize);
       dy->base = new_base;
