@@ -1,3 +1,8 @@
+2006-03-20  Marcus Crestani  <crestani@xemacs.org>
+
+	* dynarr.c (Dynarr_realloc): Malloc correct size.
+	* lisp.h: Dynamic array cleanup, remove duplicate code. 
+
 2006-03-17  Stephen J. Turnbull  <stephen@xemacs.org>
 
 	* objects-x.c (x_font_instance_truename):
